[tool.poetry]
name = "posty"
version = "2.1.0"
description = "A static site generator"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
awesome-slugify = "^1.6.5"
click = "^7.0"
feedgen = "^0.9.0"
future = "^0.18.0"
Jinja2 = "^2.11"
Markdown = "^3.3"
pytz = "*"
PyYAML = "^5.4"

[tool.poetry.dev-dependencies]
setuptools = "^53.0.0"
bpython = "^0.21"
flake8 = "^3.8.4"
pycodestyle = "^2.6.0"
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.5.0"
twine = "^3.3.0"
wheel = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
