[tool.poetry]
name = "posty"
version = "2.1.0"
description = "A static site generator"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
awesome-slugify = "^1.6.5"
click = "^7.0"
feedgen = ">=0.9,<1.1"
Jinja2 = "^3.1"
Markdown = "^3.3"
pytz = "*"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
setuptools = "*"
bpython = "*"
flake8 = "*"
pycodestyle = "*"
pytest = "*"
pytest-watch = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-click = "*"
twine = "*"
wheel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
